<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/login_bg"
    tools:ignore="MissingConstraints"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/sign_in_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/logo_bg"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingTop="5dp"
                android:layout_margin="10dp"
                android:background="@drawable/logo_img"
                android:layout_marginRight="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="40dp"
                android:background="@color/sign_in_bg"
                android:text="@string/sign_in"
                android:textColor="@color/welcomeColor"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="90dp"
                android:text="@string/sign_up"
                android:textSize="15sp"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/signUpLink"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginLeft ="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/sign_up_btn"
                android:textColor="#070707"
                android:textAllCaps="true"
                android:background="@drawable/edit_text_bg" />

        </LinearLayout>

        <ImageView
            android:layout_width="256dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/login_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/sign_in_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/e_mail"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="Email Address"
                android:textAllCaps="false"
                android:inputType="textEmailAddress"
                android:paddingLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/password"
                android:textStyle="italic"
                android:textColor="@color/text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="Password"
                android:textAllCaps="false"
                android:inputType="textPassword"
                android:paddingLeft="5dp" />

            <Button
                android:id="@+id/forgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="90dp"
                android:text="@string/forgot_pwd"
                android:textAllCaps="false"
                android:background="@color/sign_in_bg"
                android:textSize="15sp"
                android:textColor="@color/text" />

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="15dp"
                android:text="@string/sign_in_btn"
                android:textColor="@color/welcomeColor"
                android:textFontWeight="5"
                android:background="@drawable/logo_bg"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


