<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/login_bg"
        tools:ignore="MissingConstraints"
        android:id="@+id/myScrollView"
        tools:context=".HomePage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/home_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/logo_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:paddingTop="5dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/logo_img"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|bottom"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/sign_in_bg"
                    android:text="@string/home_header"
                    android:textColor="@color/welcomeColor"
                    android:textSize="25sp"
                    android:textStyle="bold" />
                <ImageView
                    android:id="@+id/signUpOrReg"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:paddingTop="5dp"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/user"
                    android:layout_marginRight="10dp"
                    android:onClick="clickEventUser"/>
                <ImageView
                    android:id="@+id/search"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/search"
                    android:layout_marginRight="5dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/signIn"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:hint="Sign in"
                    android:visibility="gone"
                    android:paddingLeft="20dp" />

                <Button
                    android:id="@+id/signUp"
                    android:layout_width="205dp"
                    android:layout_height="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:hint="Register"
                    android:visibility="gone"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="Home"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/cocoa_img" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cocoa"
                    android:gravity="center"
                    android:layout_gravity="right" />
                <Button
                    android:id="@+id/chocoExp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:background="@color/home_bg"
                    android:textSize="10sp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:onClick="clickEventChoco" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/shakes" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/shakes"
                    android:gravity="center"
                    android:layout_gravity="right" />
                <Button
                    android:id="@+id/milkyExp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:background="@color/home_bg"
                    android:textSize="10sp"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:onClick="clickEventMilky" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/soft" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/soft"
                    android:gravity="center"
                    android:layout_gravity="right" />
                <Button
                    android:id="@+id/softExp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:background="@color/home_bg"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:onClick="clickEventCoffee"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/cocktail_img" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/cocktails"
                    android:gravity="center"
                    android:layout_gravity="right" />
                <Button
                    android:id="@+id/cocktailExp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/explore"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:background="@color/home_bg"
                    android:layout_marginBottom="10dp"
                    android:layout_gravity="center"
                    android:onClick="clickEventSoda" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/cocktails" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/specials" />

                <Button
                    android:id="@+id/specialsExp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/home_bg"
                    android:gravity="center"
                    android:onClick="clickEventSpecials"
                    android:text="@string/explore"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="10sp" />
            </LinearLayout>

            <Button
                android:id="@+id/arrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="right"
                android:background="@drawable/arrow"
                android:onClick="clickEventArrow"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/logo_bg"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


            </LinearLayout>

        </LinearLayout>

    </ScrollView>





